--- a/.github/workflows/hassfest.yaml
+++ b/.github/workflows/hassfest.yaml
@@ -4,17 +4,11 @@ on:
   push:
   pull_request:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: '0 0 * * *'
 
 jobs:
-  hassfest:
+  validate:
     runs-on: "ubuntu-latest"
     steps:
-      - name: Checkout the repository
-        uses: "actions/checkout@v4"
-
-      - name: Hassfest validation
-        uses: "home-assistant/actions/hassfest@master"
-        with:
-          path: ./custom_components/xweather
-
+      - uses: "actions/checkout@v4"
+      - uses: "home-assistant/actions/hassfest@master"
