--- a/custom_components/xweather/manifest.json
+++ b/custom_components/xweather/manifest.json
@@ -5,8 +5,8 @@
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/tbclark3/homeassistant-xweather",
-  "iot_class": "cloud_polling"
+  "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/tbclark3/homeassistant-xweather/issues",
   "requirements": [],
-  "version": "1.0.0",
+  "version": "1.0.0"
 }
