--- a/custom_components/xweather/manifest.json
+++ b/custom_components/xweather/manifest.json
@@ -8,5 +8,6 @@
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/tbclark3/homeassistant-xweather/issues",
   "requirements": [],
+  "render_readme": true,
   "version": "1.0.0"
 }
