--- a/custom_components/xweather/manifest.json
+++ b/custom_components/xweather/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "xweather",
-  "name": "XWeather",
+  "name": "Xweather",
   "codeowners": ["@tbclark3"],
   "config_flow": true,
   "dependencies": [],
@@ -8,5 +8,5 @@
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/tbclark3/homeassistant-xweather/issues",
   "requirements": [],
-  "version": "1.0.0"
+  "version": "1.0.1"
 }
